--- a/src/app/viewtask/viewtask.component.css
+++ b/src/app/viewtask/viewtask.component.css
@@ -85,16 +85,17 @@
 } 
 
 .heroes a {
-  color: #888;
+  color: blue;
   text-decoration: none;
   position: relative;
   display: block;
   width: 10px;
+  font-weight: bold;
 }
 
 
 .heroes a:hover {
-  color:#607D8B;
+  color: violet;
 } 
 
 
@@ -145,6 +146,40 @@
   height: 2.8em;
   min-width: 75px;
   text-align: left;
+  margin-right: .8em;
+ 
+}
+
+.heroes .btnend {
+  display: inline-block;
+  font-size: small;
+  color: white;
+  padding: 0.8em 0.7em 0 0.7em;
+  background-color: #607D8B;
+  line-height: 2em;
+  position: relative;
+  left: -1px;
+  top: -4px;
+  height: 2.8em;
+  min-width: 90px;
+  text-align: center;
+  margin-right: .8em;
+ 
+}
+
+.heroes .btnedit {
+  display: inline-block;
+  font-size: small;
+  color: white;
+  padding: 0.8em 0.7em 0 0.7em;
+  background-color: #607D8B;
+  line-height: 2em;
+  position: relative;
+  left: -1px;
+  top: -4px;
+  height: 2.8em;
+  min-width: 80px;
+  text-align: center;
   margin-right: .8em;
  
 }
