--- a/src/app/addtask/addtask.component.html
+++ b/src/app/addtask/addtask.component.html
@@ -3,8 +3,18 @@
   <!--<label> ID :
     <input [(ngModel)]="task.taskId" name="taskId" >
   </label>-->
+  <label> Project: 
+    <input [(ngModel)]="task.projectId" name="projectId" placeholder="projectId" >
+  </label>
+  <br />
   <label> Task: 
     <input [(ngModel)]="task.task" name="task" placeholder="task" >
+  </label>
+  <br />
+
+  <label> Parent Task:
+  <input [(ngModel)]="task.isParent" type="checkbox" name="isParent" >
+  
   </label>
   <br />
   <label> Priority: 
@@ -13,15 +23,15 @@
   </label>
   <br />
   <label> Parent Task: 
-    <input [(ngModel)]="task.parentId" name="parentId" placeholder="parentId">
+    <input [(ngModel)]="task.parentId" name="parentId" placeholder="parentId" [disabled]="isDisabled()">
   </label>
   <br />
   <label> Start Date: 
-    <input type="date" [(ngModel)]="task.startDate" name="startDate" placeholder="startDate">
+    <input type="date" [(ngModel)]="task.startDate" name="startDate" placeholder="startDate" [disabled]="isDisabled()">
   </label>
   <br />
   <label> End Date: 
-    <input type="date" [(ngModel)]="task.endDate" name="endDate" placeholder="endDate">
+    <input type="date" [(ngModel)]="task.endDate" name="endDate" placeholder="endDate" [disabled]="isDisabled()">
   </label>
   <br />
   <button (click)="save()">save</button>
