--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <nav>
+    <a routerLink="/addproject">Add Project</a>
     <a routerLink="/addtask">Add Task</a>
+    <a routerLink="/adduser">Add User</a>
     <a routerLink="/viewtask">View Tasks</a>
   </nav>
   <router-outlet></router-outlet>
