--- a/src/app/adduser/adduser.component.css
+++ b/src/app/adduser/adduser.component.css
@@ -31,3 +31,19 @@ label {
   mat-slider {
     width: 300px;
   }
+  li.name-col {
+    display: inline-block;
+    font-size: small;
+    color: rgb(255, 255, 255);
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color: rgb(41, 135, 179);
+    line-height: 4em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 2.8em;
+    min-width: 300px;
+    text-align: left;
+    margin-right: .8em;
+   
+  }
