--- a/src/app/viewtask/viewtask.component.css
+++ b/src/app/viewtask/viewtask.component.css
@@ -1,5 +1,5 @@
 /* DashboardComponent's private CSS styles */
-[class*='col-'] {
+/* [class*='col-'] {
     float: left;
     padding-right: 20px;
     padding-bottom: 20px;
@@ -59,8 +59,9 @@
     .module {
       min-width: 60px;
     }
-  }
+  } */
  /* HeroesComponent's private CSS styles */
+ /*
 .heroes {
   margin: 0 0 2em 0;
   list-style-type: none;
@@ -203,4 +204,4 @@
 .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #007bff;
-}
+}*/
