--- a/src/app/addtask/addtask.component.css
+++ b/src/app/addtask/addtask.component.css
@@ -1,33 +1,41 @@
 /* HeroDetailComponent's private CSS styles */
 label {
-    display: inline-block;
-    width: 3em;
-    margin: .5em 0;
-    color: #607D8B;
-    font-weight: bold;
-  }
-  input {
-    height: 2em;
-    font-size: 1em;
-    padding-left: .4em;
-  }
-  button {
-    margin-top: 20px;
-    font-family: Arial;
-    background-color: #eee;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    cursor: pointer; cursor: hand;
-  }
-  button:hover {
-    background-color: #cfd8dc;
-  }
-  button:disabled {
-    background-color: #eee;
-    color: #ccc;
-    cursor: auto;
-  }
-  mat-slider {
-    width: 300px;
-  }
+  display: inline-block;
+  width: 15em;
+  margin: .5em 0;
+  color: #607D8B;
+  font-weight: bold;
+  text-align: left;
+}
+input {
+  height: 2em;
+  font-size: 1em;
+  padding-left: .4em;
+  
+}
+td {
+  text-align: left;
+}
+button {
+  margin-top: 20px;
+  font-family: Arial;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer; cursor: hand;
+}
+button:hover {
+  background-color: #cfd8dc;
+}
+button:disabled {
+  background-color: #eee;
+  color: #ccc;
+  cursor: auto;
+}
+mat-slider {
+  width: 300px;
+}
+.labelcol{
+  width:50px;
+}
