--- a/src/app/addtask/addtask.component.html
+++ b/src/app/addtask/addtask.component.html
@@ -3,38 +3,90 @@
   <!--<label> ID :
     <input [(ngModel)]="task.taskId" name="taskId" >
   </label>-->
-  <label> Project: 
-    <input [(ngModel)]="task.projectId" name="projectId" placeholder="projectId" >
-    <ngbd-modal-project (notifyParent) = "getNotification($event)" ></ngbd-modal-project>
-  </label>
-  <br />
-  <label> Task: 
-    <input [(ngModel)]="task.task" name="task" placeholder="task" >
-  </label>
-  <br />
-
-  <label> Parent Task:
-  <input [(ngModel)]="task.isParent" type="checkbox" name="isParent" >
+  <table class="table-borderles">
+    <tbody>
+    <tr>
+      <td>
+        <label> Project: </label>
+      </td>
+      <td>
+        <label><input [(ngModel)]="task.projectId" name="projectId" placeholder="projectId" ></label>
+      </td>
+      <td>
+        <label><ngbd-modal-project (notifyParent) = "getNotification($event)" ></ngbd-modal-project></label>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <label> Task: 
+        </label>
+      </td>
+      <td colspan="2">
+        <label>
+        <input [(ngModel)]="task.task" name="task" placeholder="task" >
+        </label>
+      </td>
   
-  </label>
-  <br />
-  <label> Priority: 
-    <mat-slider thumbLabel [(ngModel)]="task.priority" min="1" max="30" step="1" tickInterval="3" name="priority" placeholder="priority"> </mat-slider>
-
-  </label>
-  <br />
-  <label> Parent Task: 
-    <input [(ngModel)]="task.parentId" name="parentId" placeholder="parentId" [disabled]="isDisabled()">
-    <ngbd-modal-parent (notifyParent) = "getNotificationParent($event)" ></ngbd-modal-parent>
-  </label>
-  <br />
-  <label> Start Date: 
-    <input type="date" [(ngModel)]="task.startDate" name="startDate" placeholder="startDate" [disabled]="isDisabled()">
-  </label>
-  <br />
-  <label> End Date: 
-    <input type="date" [(ngModel)]="task.endDate" name="endDate" placeholder="endDate" [disabled]="isDisabled()">
-  </label>
-  <br />
-  <button (click)="save()">save</button>
+    </tr>
+    <tr>
+      <td>
+        <label>
+          Parent Task:
+        </label>
+      </td>
+      <td>
+        <label>
+          <input [(ngModel)]="task.isParent" type="checkbox" name="isParent" >
+        </label>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <label> Priority: </label>
+      </td>
+      <td>
+        <label>
+          <mat-slider thumbLabel [(ngModel)]="task.priority" min="1" max="30" step="1" tickInterval="3" name="priority" placeholder="priority"> </mat-slider>
+        </label>
+      </td>
+  </tr>
+  <tr>
+    <td>
+      <label> Parent Task: </label>
+    </td>
+    <td>
+      <label>
+        <input [(ngModel)]="task.parentId" name="parentId" placeholder="parentId" [disabled]="isDisabled()">
+      </label>
+    </td>
+    <td>
+      <label>
+        <ngbd-modal-parent (notifyParent) = "getNotificationParent($event)" ></ngbd-modal-parent>
+      </label>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <label> Start Date:  </label>
+    </td>
+    <td>
+      <label>
+        <input type="date" [(ngModel)]="task.startDate" name="startDate" placeholder="startDate" [disabled]="isDisabled()">
+      </label>
+    </td>
+    <td>
+      <label> End Date: </label>
+    </td>
+    <td>
+      <label>
+        <input type="date" [(ngModel)]="task.endDate" name="endDate" placeholder="endDate" [disabled]="isDisabled()">
+      </label>
+    </td>
+  </tr> 
+<tr>
+  <td>  <button (click)="save()">save</button> 
+  </td>
+</tr>
+</tbody>
+</table>
 </form>
